# Snowfox

./: .babel-eslint.rc.js  .clang-format-ignore  .cron.yml  .editorconfig  .gitignore  .hgignore  .lando.ini  .mailmap  .prettierignore  .prettierrc.js  .rstcheck.cfg  .stylelintignore  .stylelintrc.js  .taskcluster.yml  CLOBBER  Cargo.toml  LICENSE  Makefile.in  README.md  build.gradle  client.py  configure.py  eslint-test-paths.config.mjs  mach  mots.yaml  moz.build  moz.configure  mozconfig  package-lock.json  package.json  settings.gradle
.cargo/: audit.toml  config.toml.in
accessible/: metrics.yaml  moz.build
branding/: README.md  configure.sh
browser/: app.mozbuild  build.mk  moz.build  moz.configure
caps/: BasePrincipal.cpp  ContentPrincipal.cpp  DomainPolicy.h  NullPrincipal.cpp  OriginAttributes.cpp  OriginAttributes.h  OriginAttributesHashKey.h  nsScriptSecurityManager.cpp  nsScriptSecurityManager.h
chrome/: nsChromeProtocolHandler.h  nsChromeRegistry.cpp  nsChromeRegistry.h  nsChromeRegistryChrome.cpp  nsChromeRegistryChrome.h  nsChromeRegistryContent.h
config/: autoconfig.js  check_spidermonkey_style.py  check_vanilla_allocations.py  config.mk  create_rc.py  create_res.py  make-system-wrappers.py  milestone.txt  policies.json  printprereleasesuffix.py  recurse.mk  rules.mk  snowfox.cfg  system-headers.mozbuild  wasm2c.py
devtools/: moz.build  rename.py  templates.mozbuild
docs/: conf.py  config.yml  index.rst
dom/: metrics.yaml  moz.build
dom/base/speculationrules/: Cargo.toml  cbindgen.toml  lib.rs  parser.rs
dom/webauthn/authrs_bridge/: Cargo.toml
dom/webauthn/authrs_bridge/src/: lib.rs  test_token.rs
editor/: AsyncSpellCheckTestHelper.sys.mjs
gfx/: metrics.yaml
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
hal/: Hal.cpp  moz.build
image/: AnimationFrameBuffer.h  AutoRestoreSVGState.h  BMPHeaders.h  ClippedImage.cpp  DecodePool.cpp  DecoderFactory.cpp  DynamicImage.h  FetchDecodedImage.cpp  FrozenImage.h  IDecodingTask.cpp  IDecodingTask.h  ImageCacheKey.cpp  ImageMemoryReporter.cpp  ImageUtils.cpp  ImageWrapper.h  OrientedImage.cpp  OrientedImage.h  ProgressTracker.cpp  ProgressTracker.h  RasterImage.cpp  SVGDocumentWrapper.cpp  ScriptedNotificationObserver.h  SourceBuffer.cpp  SourceBuffer.h  SurfaceCache.cpp  SurfacePipe.h  VectorImage.cpp  imgFrame.cpp  imgFrame.h  imgLoader.cpp  imgLoader.h  imgRequest.cpp  imgRequest.h  imgRequestProxy.cpp  imgRequestProxy.h  imgTools.cpp
image/rust/jxl/: Cargo.toml  cbindgen.toml
image/rust/jxl/src/: decoder.rs  ffi.rs  lib.rs
intl/: Encoding.h  EncodingDetector.h  icu_sources_data.py  update-icu.sh  update-tzdata.sh
ipc/: pull-chromium.py
js/: app.mozbuild  ffi.configure  moz.configure
memory/: app.mozbuild
mfbt/: Assertions.cpp  Assertions.h  Atomics.h  Attributes.h  BitSet.h  CheckedInt.h  DbgMacro.h  DoublyLinkedList.h  HashFunctions.h  HashTable.h  LinkedList.h  MacroArgs.h  Maybe.h  RefPtr.h  ResultExtensions.h  SEH.h  Span.h  TiedFields.h  UsingEnum.h  Variant.h  XorShift128PlusRNG.h  api.yml  moz.build
netwerk/: metrics.yaml  pings.yaml
netwerk/base/ssl_tokens_cache/: Cargo.toml  README.md  cbindgen.toml  moz.build
netwerk/base/ssl_tokens_cache/src/: lib.rs
nsprpub/: .editorconfig  TAG-INFO  configure  configure.in
patches/: 0001-snowfox-branding-example.patch
python/: mach_commands.py  moz.build
python/mozbuild/mozbuild/test/backend/data/host-rust-program-output-category/: Cargo.toml  moz.build
remote/: mach_commands.py
security/: mach_commands.py  moz.build
security/lockstore/lockstore_ffi/: Cargo.toml  cbindgen.toml
security/lockstore/lockstore_ffi/src/: lib.rs
security/lockstore/lockstore_rs/: Cargo.toml
security/lockstore/lockstore_rs/src/: crypto.rs  datastore.rs  keystore.rs  lib.rs  pbkdf2.rs  utils.rs
security/lockstore/lockstore_rs/tests/: crypto_tests.rs  datastore_tests.rs  keystore_tests.rs  password_tests.rs  pkcs11_tests.rs
services/app-services-tools/nimbus-fml/: Cargo.toml
startupcache/: StartupCache.cpp  StartupCache.h  StartupCacheUtils.cpp
storage/: ObfuscatingVFS.cpp  ObfuscatingVFS.h  SQLiteEncryption.cpp  SQLiteEncryption.h  StoragePathUtil.cpp  StoragePathUtil.h  VacuumManager.cpp  metrics.yaml  moz.build  mozStorageArgValueArray.h  mozStorageError.h  (+19 more)
testing/webdriver/: Cargo.toml
testing/webdriver/src/: capabilities.rs  command.rs  common.rs  httpapi.rs  response.rs  server.rs
toolkit/components/uniffi-bindgen-gecko-js/components/: Cargo.toml  lib.rs  moz.build
toolkit/crashreporter/android/export/: Cargo.toml  moz.build
toolkit/crashreporter/crash_helper_client/: Cargo.toml
toolkit/crashreporter/crash_helper_client/src/: lib.rs  platform.rs
toolkit/crashreporter/crash_helper_client/src/platform/: android.rs  linux.rs  macos.rs  unix.rs  windows.rs
toolkit/crashreporter/crash_helper_common/: Cargo.toml
toolkit/crashreporter/crash_helper_common/src/: appinfo.rs  errors.rs  ipc_channel.rs  ipc_connector.rs  ipc_listener.rs  ipc_queue.rs  lib.rs  messages.rs  platform.rs
toolkit/crashreporter/crash_helper_common/src/appinfo/: unix.rs  windows.rs
toolkit/crashreporter/crash_helper_common/src/ipc_channel/: mach.rs  unix.rs  windows.rs
toolkit/crashreporter/crash_helper_common/src/ipc_connector/: windows.rs
toolkit/crashreporter/crash_helper_common/src/ipc_listener/: unix.rs  windows.rs
toolkit/crashreporter/crash_helper_common/src/ipc_queue/: mach.rs  windows.rs
toolkit/crashreporter/crash_helper_common/src/platform/: linux.rs  mach.rs  windows.rs
toolkit/crashreporter/crashping/: Cargo.toml  build.rs  conversions.py  generated_metrics.yaml  glean_metrics.py
toolkit/crashreporter/crashping/src/: annotations.rs  lib.rs  single_instance.rs
toolkit/crashreporter/rust_minidump_writer_linux/: Cargo.toml  cbindgen.toml
toolkit/crashreporter/rust_minidump_writer_linux/src/: lib.rs
tools/lint/mozcheck/: Cargo.toml  __init__.py
tools/lint/mozcheck/src/: batch.rs  common.rs  file_perm.rs  file_whitespace.rs  license.rs  main.rs  pathutil.rs  rejected_words.rs  trojan_source.rs
(+30324 files in other folders)
