[workspace]

# These are the "root" crates, which we build and test as top-level targets.
# Their transitive dependencies and dev-dependencies are included automatically
# and do not need to be listed here. Their external dependencies are vendored
# into `third_party/rust` by `mach vendor rust`.
members = [
  "browser/app/nmhproxy/",
  "js/src/rust",
  "netwerk/base/idna_glue",
  "netwerk/test/http3server",
  "security/lockstore/lockstore_ffi",
  "security/lockstore/lockstore_rs",
  "security/manager/ssl/tests/unit/pkcs11testmodule",
  "security/manager/ssl/tests/unit/test_trust_anchors",
  "services/app-services-tools/embedded-uniffi-bindgen",
  "services/app-services-tools/nimbus-fml",
  "testing/geckodriver",
  "third_party/application-services/tools/embedded-uniffi-bindgen",
  "third_party/application-services/tools/uniffi-bindgen-library-mode",
  "third_party/application-services/components/ads-client",
  "third_party/application-services/components/autofill",
  "third_party/application-services/components/context_id",
  "third_party/application-services/components/crashtest",
  "third_party/application-services/components/example",
  "third_party/application-services/components/filter_adult",
  "third_party/application-services/components/fxa-client",
  "third_party/application-services/components/init_rust_components",
  "third_party/application-services/components/logins",
  "third_party/application-services/components/merino",
  "third_party/application-services/components/places",
  "third_party/application-services/components/push",
  "third_party/application-services/components/relay",
  "third_party/application-services/components/relevancy",
  "third_party/application-services/components/remote_settings",
  "third_party/application-services/components/search",
  "third_party/application-services/components/suggest",
  "third_party/application-services/components/support/error",
  "third_party/application-services/components/support/find-places-db",
  "third_party/application-services/components/support/firefox-versioning",
  "third_party/application-services/components/support/guid",
  "third_party/application-services/components/support/interrupt",
  "third_party/application-services/components/support/jwcrypto",
  "third_party/application-services/components/support/payload",
  "third_party/application-services/components/support/nimbus-fml",
  "third_party/application-services/components/support/rand_rccrypto",
  "third_party/application-services/components/support/rate-limiter",
  "third_party/application-services/components/support/restmail-client",
  "third_party/application-services/components/support/rc_crypto",
  "third_party/application-services/components/support/rc_crypto/nss",
  "third_party/application-services/components/support/rc_crypto/nss/nss_build_common",
  "third_party/application-services/components/support/rc_crypto/nss/nss_sys",
  "third_party/application-services/components/support/rust-log-forwarder",
  "third_party/application-services/components/support/sql",
  "third_party/application-services/components/support/text-table",
  "third_party/application-services/components/support/tracing",
  "third_party/application-services/components/support/types",
  "third_party/application-services/components/sync_manager",
  "third_party/application-services/components/sync15",
  "third_party/application-services/components/tabs",
  "third_party/application-services/components/viaduct",
  "third_party/application-services/components/webext-storage",
  "third_party/application-services/components/webext-storage/ffi",
  "third_party/application-services/megazords/full",
  "toolkit/components/uniffi-bindgen-gecko-js",
  "toolkit/crashreporter/android/export",
  "toolkit/crashreporter/client/app",
  "toolkit/crashreporter/crash_helper_server",
  "toolkit/crashreporter/crash_helper_client",
  "toolkit/crashreporter/crashping",
  "toolkit/crashreporter/mozwer-rust",
  "toolkit/library/gtest/rust",
  "toolkit/library/rust/",
  "services/application-services/components/viaduct-necko",
  "js/src/builtin/normalizer_glue",
]

# Excluded crates may be built as dependencies, but won't be considered members
# of the workspace and their dev-dependencies won't be included.
exclude = [
  # Exclude third-party code vendored into mozilla-central.
  "servo",
  "third_party/rust",

  # Excluded because these crates have their own Cargo workspaces so they can't
  # be included in the top-level one.
  "gfx/wr",

  # Excluded because they are used only as dependencies, not top-level targets,
  # so we don't need to vendor their dev-dependencies.
  "gfx/webrender_bindings",
  "media/mp4parse-rust/mp4parse",
  "media/mp4parse-rust/mp4parse_capi",
  "xpcom/rust/gkrust_utils",
  "toolkit/components/protobuf/scripts",
  "toolkit/crashreporter/minidump-analyzer",
  "tools/lint/test/files/clippy",
  "tools/fuzzing/rust",
  "dom/base/rust",
  "dom/origin-trials/ffi",
  "ipc/rust/ipdl_utils",
  "tools/update-verify/marannon",

  # Excluded because we don't want to vendor their dependencies.
  "intl/l10n/rust/l10nregistry-tests",

  # Exclude various app-services crates to avoid vendoring in their dependencies
  # The disadvantage of this is that building these crates will require a separate `Cargo.lock` file and `target` directory.
  # This is not ideal, but we are willing accept the trade-off for now.
  #
  # These depend on `hyper-tls` and we do not want to bring in the subdependencies, like `openssl`
  "third_party/application-services/components/support/viaduct-hyper",
  "third_party/application-services/components/support/viaduct-reqwest",
  # Excluded because it depends on `hyper` and having it as top-level member would make
  # `cargo vet` require it to be `safe-to-deploy`.  However, since we only use it as a dev-dependency, we want
  # it to be `safe-to-run`.
  "third_party/application-services/components/support/viaduct-dev",
  # CLIs that depend on `viaduct-hyper`
  "third_party/application-services/examples/autofill-utils/",
  "third_party/application-services/examples/cli-support/",
  "third_party/application-services/examples/example-cli/",
  "third_party/application-services/examples/fxa-client/",
  "third_party/application-services/examples/merino-cli/",
  "third_party/application-services/examples/places-autocomplete/",
  "third_party/application-services/examples/places-utils/",
  "third_party/application-services/examples/push-livetest/",
  "third_party/application-services/examples/relay-cli/",
  "third_party/application-services/examples/relevancy-cli/",
  "third_party/application-services/examples/remote-settings-cli/",
  "third_party/application-services/examples/suggest-cli/",
  "third_party/application-services/examples/sync-pass/",
  "third_party/application-services/examples/tabs-sync/",
  "third_party/application-services/examples/viaduct-cli/",
  "third_party/application-services/components/example/cli",
  "third_party/application-services/components/support/nimbus-cli",
  "third_party/application-services/components/support/nimbus-fml",
  # Excluded to avoid vendoring in `trybuild` and its subdependencies
  "third_party/application-services/components/support/error/tests",
  # Temporarily in excludes until we can land some nimbus fixes:
  # * Remove unicode_segmentation dependency
  # * Split off the `examples` code into a separate crate
  "third_party/application-services/components/nimbus",
  "third_party/application-services/megazords/full",
  # Temporarily in excludes until everyone is on the same `ohttp`/`bhttp` version
  "third_party/application-services/components/as-ohttp-client",
  # Excluded because of the `viaduct-reqwest` dependency
  "third_party/application-services/megazords/ios-rust",
]

# Use the new dependency resolver to reduce some of the platform-specific dependencies.
# This is required for 'third_party/rust/wgpu-hal'
resolver = "2"

[workspace.package]
rust-version = "1.90.0"

[workspace.dependencies]
# Shared across multiple UniFFI consumers.
uniffi = "0.31"
uniffi_bindgen = "0.31"
uniffi_pipeline = "0.31"
# Shared across multiple application-services consumers.
rusqlite = "0.37"
# Shared across multiple glean consumers.
glean = "=67.3.2"

# Explicitly specify what our profiles use.  The opt-level setting here is
# a total fiction; see the setup of MOZ_RUST_DEFAULT_FLAGS for what the
# opt-level setting will be as a result of various other configure flags.
[profile.dev]
opt-level = 1
rpath = false
lto = false
debug-assertions = true
panic = "abort"

[profile.release]
opt-level = 2
rpath = false
debug-assertions = false
panic = "abort"

# Optimize build dependencies, because bindgen and proc macros / style
# compilation take more to run than to build otherwise.
[profile.dev.build-override]
opt-level = 1

[profile.release.build-override]
opt-level = 1

# optimizing glsl more makes a big difference in swgl build times
[profile.dev.package.glsl]
opt-level = 2

[profile.release.package.glsl]
opt-level = 2

# Megazord profiles: same as dev/release but with panic=unwind for parity with
# how app-services is currently built.
[profile.dev-megazord]
inherits = "dev"
panic = "unwind"

[profile.release-megazord]
inherits = "release"
panic = "unwind"

[patch.crates-io]
# The build system doesn't want those to be used, but they are pulled anyways (because
# dependencies can't be disabled based on features), but remain unused. We ensure they
# stay unused by overriding them with crates that contain enough to build the current
# code and will fail the build in unwanted cases.
cmake = { path = "build/rust/cmake" }
vcpkg = { path = "build/rust/vcpkg" }

# Helper crate for integration in the gecko build system.
mozbuild = { path = "build/rust/mozbuild" }

# Workspace hack
mozilla-central-workspace-hack = { path = "build/workspace-hack" }

# windows-targets replacement. It avoids the large dependencies of the original
# crate, which we don't really need as we require MSVC anyways.
windows-targets = { path = "build/rust/windows-targets" }

# windows-link replacement that doesn't use raw-dylibs, which have problems on
# the i686-pc-windows-gnu target.
windows-link = { path = "build/rust/windows-link" }

# Patch windows to use a non-vendored local copy of the crate.
windows = { path = "build/rust/windows" }

# Dummy oslog replacement. It's only used by glean in code that is not actually used.
oslog = { path = "build/rust/oslog" }

# Override terminal_size with a dummy crate that returns a fixed 80x25 terminal size.
terminal_size = { path = "build/rust/terminal_size" }

# Patch bitflags 1.0 to 2.0
bitflags = { path = "build/rust/bitflags" }

# Patch r-efi to an empty crate
r-efi = { path = "build/rust/r-efi" }

# Patch redox_users to an empty crate
redox_users = { path = "build/rust/redox_users" }

# Patch redox_syscall to an empty crate
redox_syscall = { path = "build/rust/redox_syscall" }

# Patch hermit-abi to an empty crate
hermit-abi = { path = "build/rust/hermit-abi" }

# mls-rs pulls these in unconditionally (or for non-Gecko targets), but their
# code paths are gated on `cfg(not(feature = "std"))` or
# `cfg(not(target_has_atomic = "ptr"))`, neither of which Gecko ever hits.
spin = { path = "build/rust/spin" }
portable-atomic = { path = "build/rust/portable-atomic" }
portable-atomic-util = { path = "build/rust/portable-atomic-util" }

# Patch base64 0.21 to 0.22
base64_21 = { package = "base64", path = "build/rust/base64" }

# Patch wasi 0.11 to 0.14
wasi_0_11 = { package = "wasi", path = "build/rust/wasi" }

# Patch itertools 0.13 to 0.14
itertools = { path = "build/rust/itertools" }

# tokio 0.29.0 includes an experimental "tracing" feature which requires
# backtrace ^0.3.58 and the `tokio_unstable` flag. We don't use it, and nothing
# else we do use requires backtrace, so dummy it out for now.
backtrace = { path = "build/rust/backtrace" }

# Locally patch bindgen to a yet-unreleased version.
bindgen_0_72 = { package = "bindgen", git = "https://github.com/rust-lang/rust-bindgen", rev = "9366e0af8da529c958b4cd4fcbe492d951c86f5c" }

# Patch bindgen 0.69 to 0.72
bindgen = { path = "build/rust/bindgen" }

# Locally patch icu_normalizer to take fixes from the 2.3 track
icu_collator = { path = "third_party/rust/icu_collator" }
icu_collator_data = { path = "third_party/rust/icu_collator_data" }
icu_normalizer = { path = "third_party/rust/icu_normalizer" }
icu_normalizer_data = { path = "third_party/rust/icu_normalizer_data" }
icu_collections = { path = "third_party/rust/icu_collections" }
utf8_iter = { path = "third_party/rust/utf8_iter" }
utf16_iter = { path = "third_party/rust/utf16_iter" }
icu_properties = { path = "third_party/rust/icu_properties" }
icu_properties_data = { path = "third_party/rust/icu_properties_data" }

# Patch autocfg to hide rustc output. Workaround for https://github.com/cuviper/autocfg/issues/30
autocfg = { path = "third_party/rust/autocfg" }

# Patch goblin 0.7.0 to 0.8
goblin = { path = "build/rust/goblin" }

# Implement getrandom 0.2 in terms of 0.3
getrandom = { path = "build/rust/getrandom" }

# Implement procfs-core 0.17.0 in terms of 0.18.0
procfs-core = { path = "build/rust/procfs-core" }

# Patch rustc-hash 1.1.0 to 2.1.1
rustc-hash = { path = "build/rust/rustc-hash" }

# Patch memoffset from 0.8.0 to 0.9.0 since it's compatible and it avoids duplication
memoffset = { path = "build/rust/memoffset" }

# Patch `hashbrown` 0.13.* to depend on 0.15.*
hashbrown_0_13 = { package = "hashbrown", path = "build/rust/hashbrown-0.13" }

# Patch `hashbrown` 0.14.* to depend on 0.15.*
hashbrown_0_14 = { package = "hashbrown", path = "build/rust/hashbrown-0.14" }

# Patch `hashbrown` 0.15.* to depend on 0.16.*
hashbrown_0_15 = { package = "hashbrown", path = "build/rust/hashbrown-0.15" }

# Patch `hashbrown` 0.16.* to depend on 0.17.*
hashbrown_0_16 = { package = "hashbrown", path = "build/rust/hashbrown" }

# Patch `hashlink` 0.10.* to 0.11.*
# This technically breaks `hashbrown::DefaultHashBuilder: Copy`, but it's not something we use.
hashlink = { path = "build/rust/hashlink" }

# Patch `thiserror` 1 to 2.
thiserror = { path = "build/rust/thiserror" }

# Patch `toml` 0.5 to 0.9
toml = { path = "build/rust/toml" }

# The following overrides point to dummy projects, as a temporary measure until this is resolved:
# https://github.com/rust-lang/cargo/issues/6179
js-sys = { path = "build/rust/dummy-web/js-sys" }
wasm-bindgen = { path = "build/rust/dummy-web/wasm-bindgen" }
web-sys = { path = "build/rust/dummy-web/web-sys" }


# Upgrade `core-foundation` 0.9.* to 0.10.
core-foundation = { path = "build/rust/core-foundation" }
# Patch `core-graphics-types` 0.1.* to 0.2.
core-graphics-types = { path = "build/rust/core-graphics-types" }
# Patch `dispatch2` to an empty crate that cannot be built.
dispatch2 = { path = "build/rust/dispatch2" }

# Upgrade `rusqlite` 0.31 to 0.33.
rusqlite = { path = "build/rust/rusqlite" }

# Overrides to allow easier use of common internal crates.
moz_asserts = { path = "mozglue/static/rust/moz_asserts" }

# Patch `rure` to disable building the cdylib and staticlib targets
# Cargo has no way to disable building targets your dependencies provide which
# you don't depend on, and linking the cdylib breaks during instrumentation
# builds.
# Workaround for https://github.com/rust-lang/cargo/issues/11232
rure = { path = "third_party/rust/rure" }

# Patch zlib-rs to test a workaround for crashes on Intel Raptor Lake CPU.
zlib-rs = { path = "third_party/rust/zlib-rs" }

# To-be-published changes.
unicode-bidi = { git = "https://github.com/servo/unicode-bidi", rev = "ca612daf1c08c53abe07327cb3e6ef6e0a760f0c" }


# Other overrides
any_all_workaround = { git = "https://github.com/hsivonen/any_all_workaround", rev = "7fb1b7034c9f172aade21ee1c8554e8d8a48af80" }
cose = { git = "https://github.com/franziskuskiefer/cose-rust", rev = "43c22248d136c8b38fe42ea709d08da6355cf04b" }
firefox-on-glean = { path = "toolkit/components/glean/api" }
icu_capi = { path = "intl/icu_capi" }
icu_segmenter_data = { path = "intl/icu_segmenter_data" }
libudev-sys = { path = "dom/webauthn/libudev-sys" }
midir = { git = "https://github.com/mozilla/midir.git", rev = "54759f681f3b523e120d047adec2bb1a97152017" }
# Allow webrender to have a versioned dependency on the older crate on crates.io
# in order to build standalone.
malloc_size_of_derive = { path = "xpcom/rust/malloc_size_of_derive" }
# Use the in-tree code instead of pulling it in. It matches the crates.io version
wr_malloc_size_of = { path = "gfx/wr/wr_malloc_size_of" }
# Remove HarfBuzz itself from harfbuzz-sys, since we already maintain HarfBuzz itself in the tree.
harfbuzz-sys = { git = "https://github.com/hsivonen/rust-harfbuzz", rev = "9d58a23a98772a197291d04af93f7041b7093d95" }
# Make `harfbuzz` compile for targets with unsigned C char, such as aarch64 Android.
harfbuzz = { git = "https://github.com/hsivonen/rust-harfbuzz", rev = "9d58a23a98772a197291d04af93f7041b7093d95" }
# Also vendor `harfbuzz-traits` to keep cargo-vendor happy.
harfbuzz-traits = { git = "https://github.com/hsivonen/rust-harfbuzz", rev = "9d58a23a98772a197291d04af93f7041b7093d95" }
# Make --enable-rust-simd compatible with Rust 1.95
encoding_rs = { git = "https://github.com/hsivonen/encoding_rs", rev = "1236d1bc423e6ba35a06485f74a6304db2d703b5" }

# objc 0.2.7 + fa7ca43b862861dd1cd000d7ad01e6e0266cda13
objc = { git = "https://github.com/glandium/rust-objc", rev = "4de89f5aa9851ceca4d40e7ac1e2759410c04324" }

# allocator-api2 + f95e3419ce41883904fcb2279b52aa35b5f04d76 + fdd92751afa7ce34408b677004b429d597e72c90
allocator-api2 = { git = "https://github.com/glandium/allocator-api2", rev = "ad5f3d56a5a4519eff52af4ff85293431466ef5c" }

# application-services overrides to make updating them all simpler.
context_id = { path = "third_party/application-services/components/context_id" }
error-support = { path = "third_party/application-services/components/support/error" }
filter_adult = { path = "third_party/application-services/components/filter_adult" }
interrupt-support = { path = "third_party/application-services/components/support/interrupt" }
relevancy = { path = "third_party/application-services/components/relevancy" }
search = { path = "third_party/application-services/components/search" }
sql-support = { path = "third_party/application-services/components/support/sql" }
suggest = { path = "third_party/application-services/components/suggest" }
sync15 = { path = "third_party/application-services/components/sync15" }
tabs = { path = "third_party/application-services/components/tabs" }
tracing-support = { path = "third_party/application-services/components/support/tracing" }
viaduct = { path = "third_party/application-services/components/viaduct" }
webext-storage = { path = "third_party/application-services/components/webext-storage" }
logins = { path = "third_party/application-services/components/logins" }
init_rust_components = { path = "third_party/application-services/components/init_rust_components" }
breach-alerts = { path = "third_party/application-services/components/breach-alerts" }
# temporary ohttp override enabling app-services build-related hacks while we wait for a new version.
ohttp = { git = "https://github.com/martinthomson/ohttp", rev = "600931b5a1e947776cbaad931ed78f1e89005352" }

# Patched version of zip 2.4.2 to allow for reading omnijars.
zip = { path = "third_party/rust/zip" }

# Patch libcrux-traits to avoid unnecessary unused dependencies and conflicts.
libcrux-traits = { path = "build/rust/libcrux-traits" }

# Redirect jxl_simd to the in-tree vendored copy so we can carry a patch that
# works around a rust/LLVM issue on macOS/x86_64 that makes jxl-rs decode ~3x
# slower on PGO builds. See bug 2043090.
[patch."https://github.com/libjxl/jxl-rs"]
jxl_simd = { path = "third_party/rust/jxl_simd" }
