[package]
name = "dom_speculationrules"
version = "0.1.0"
edition = "2024"
authors = ["Adam Vandolder <avandolder@mozilla.com>"]
license = "MPL-2.0"

[dependencies]
env_logger = { version = "0.10", default-features = false }
log = "0.4"
nsstring = { path = "../../../xpcom/rust/nsstring" }
regex = "1.10.5"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
urlpattern = "0.6.0"
url = "2.5.7"
thin-vec = { version = "0.2.14", features = ["gecko-ffi", "serde"] }

[lib]
path = "lib.rs"
