[package]
name = "authrs_bridge"
version = "0.1.0"
edition = "2021"
authors = ["Martin Sirringhaus", "John Schanck"]

[dependencies]
authenticator = { tag = "v0.6.0", git = "https://github.com/mozilla/authenticator-rs", features = ["gecko"] }
base64 = "^0.22"
cstr = "0.2"
log = "0.4"
moz_task = { path = "../../../xpcom/rust/moz_task" }
nserror = { path = "../../../xpcom/rust/nserror" }
nsstring = { path = "../../../xpcom/rust/nsstring" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_cbor_2 = "0.13"
serde_json = "1.0"
static_prefs = { path = "../../../modules/libpref/init/static_prefs" }
thin-vec = { version = "0.2.1", features = ["gecko-ffi"] }
xpcom = { path = "../../../xpcom/rust/xpcom" }

[features]
fuzzing = []
