[package]
name = "lockstore_ffi"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
nserror = { path = "../../../xpcom/rust/nserror" }
nsstring = { path = "../../../xpcom/rust/nsstring" }
xpcom = { path = "../../../xpcom/rust/xpcom" }
static_prefs = { path = "../../../modules/libpref/init/static_prefs" }

lockstore_rs = { path = "../lockstore_rs" }

thin-vec = { version = "^0.2.12", features = ["gecko-ffi"] }
log = "^0.4.20"
zeroize = "1.8"
