[package]
name = "toolchain-nimbus-fml"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[[bin]]
name = "nimbus-fml"

[dependencies]
nimbus-fml = { path = "../../../third_party/application-services/components/support/nimbus-fml" }
mozilla-central-workspace-hack = { version = "0.1", features = ["toolchain-nimbus-fml"], optional = true }
