[package]
name = "crash_helper_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
crash_helper_common = { path = "../crash_helper_common" }
num-derive = "0.4"
num-traits = "0.2"

[target."cfg(any(target_os = \"android\", target_os = \"linux\", target_os = \"macos\"))".dependencies]
nix = { version = "0.30", features = ["process"] }

[target."cfg(target_os = \"macos\")".dependencies]
mach2 = { version = "0.4" }

[target."cfg(any(target_os = \"android\", target_os = \"linux\"))".dependencies]
minidump-writer = { git = "https://github.com/rust-minidump/minidump-writer.git", rev = "107e531a7a06f8e886ffcee13eb07e9ded43473b" }
rust_minidump_writer_linux = { path = "../rust_minidump_writer_linux" }

[target."cfg(target_os = \"windows\")".dependencies]
windows-sys = { version = "0.61" } # All features inherited from crash_helper_common
