[package]
name = "crashping"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
anyhow = "1"
glean = { workspace = true }
log = "0.4"
mozilla-central-workspace-hack = { version = "0.1", features = ["crashping"], optional = true }
serde_json = "1"
time = { version = "0.3" }

[dev-dependencies]
env_logger = { version = "0.10", default-features = false }

[build-dependencies]
mozbuild = "0.1"
