[package]
name = "rust_minidump_writer_linux"
version = "0.1.0"
authors = ["Martin Sirringhaus"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crash-context = "0.6.1"
minidump-writer = { git = "https://github.com/rust-minidump/minidump-writer.git", rev = "107e531a7a06f8e886ffcee13eb07e9ded43473b" }
crash_helper_common = { path = "../crash_helper_common/" }
mozannotation_server = { path = "../mozannotation_server/" }
libc = "0.2.74"
anyhow = "1.0"
