# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[workspace]

[package]
name = "mozcheck"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
tl = "0.7"
globset = "0.4"
ignore = "0.4"
rayon = "1"
unicode_categories = "0.1"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Not published to crates.io, so metadata warnings are irrelevant
cargo_common_metadata = "allow"
